image overlap issue fixed

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -243,6 +243,11 @@
   }
 }
 @media screen and (max-width: 580px) {
+  #home {
+    padding: 0 0 10px 0;
+    display: flex;
+    flex-direction: column;
+  }
   .mainImage {
     max-height: 300px;
     max-width: 300px;
@@ -306,19 +311,26 @@
     outline: 1px solid #000;
   } */
   #info_01,
-  #info_02 {
+  #info_02,
+  #info_03 {
     background-color: #96cf7d;
     /* color: #000; */
   }
-  #info_03 {
+  /* #info_03 {
     display: none;
-  }
+  } */
 }
 
 @media screen and (max-width: 420px) {
+  #home {
+    padding: 0 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
   .slider-images {
     margin: 0;
-    margin-bottom: -50px !important;
+    margin-bottom: 50px;
     height: auto;
     width: 100%;
     /* padding: 60px 0 20px 0 !important; */
@@ -336,5 +348,21 @@
   .front_page_info h2 {
     width: 90%;
     font-size: 25px;
+  }
+}
+@media only screen and (max-width: 924px) and (min-width: 581px) {
+  #home {
+    padding: 0 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+  }
+}
+@media only screen and (max-width: 1024px) and (min-width: 925px) {
+  #home {
+    padding: 0 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
   }
 }
